Started working on the system for tags
Added JSON Simple, from
https://code.google.com/archive/p/json-simple/downloads

As of now the program will create two files in AppData\Connoisseur upon
booting the program.

1) system-data.json - This file will be used to store any system
settings/properties. As of now it only contains one property
"booted-once" which is automatically set to true when this file is first
made.

2) directory-data.json - This file will be used to store all the data
regarding which directories Connoisseur will track and which MediaFiles
it contains as well as what MediaTags those MediaFiles have.

These data files can be accessed by using fileManager.getSystemData();
or fileManager.getDirectoryData();

--- a/.classpath
+++ b/.classpath
@@ -7,5 +7,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="refs/jaudiotagger-2.2.6-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="C:/Users/jonat/git/seJava2/refs/json-simple-1.1.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
